# emissions_harmonization_historical

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: History.yaml  mappings_df.csv  region_df.csv
data/definitions/region/: History.yaml
data/national/ceds/: region_df.csv
data/raw/harmonisation_overrides/: harmonisation-methods_gridding_MESSAGE.csv  harmonisation-methods_gridding_REMIND.csv
data/raw/wmo-2022/: Emissions_fromWMO2022.xlsx
data/regionmapping/: region_df.csv
data/scenarios/data_raw/: .gitignore  20250131-125121_all-meta.csv  README.md  download-database.py  requirements.txt
gcages/: .copier-answers.yml  .gitignore  README.md  mkdocs.yml  pyproject.toml
gcages/changelog/: README.md
gcages/docs/: installation.md
gcages/docs/how-to-guides/: basic-calculation.md
gcages/scripts/: changelog-to-release-template.py  convert_ar6_res_to_test_csvs.py
gcages/src/gcages/: __init__.py  aneris_helpers.py  database.py  io.py  pandas_helpers.py  parallelisation.py  testing.py  units_helpers.py
gcages/tests/: conftest.py
gcages/tests/integration/: test_cli_integration.py  test_database.py  test_harmonisation_integration.py  (+1 more)
notebooks/: 0101_CEDS-prepare.py  0102_GFED4-prepare.py  0103_GFED4-BB4CMIP-prepare.py  0104_GFED-BB4CMIP-postprocess.py  0105_GCB-prepare.py  0106_Velders-et-al-2022-prepare.py  0107_Adam-et-al-2024-prepare.py  0108_wmo-2022-prepare.py  0109_edgar-prepare.py  0110_CAMS.py  0110_cmip-conc-inversions.py  0111_PRIMAP-histTP-prepare.py  0112_cmip-conc-inversions.py  0150_CAMS.py  0151_EDGAR.py  0151_EDGAR_harmonisation_sectors.py  0152_FAO_harmonisation_sectors.py  0201_CEDS_GFED4_combined.py  0201_combine_data_sources.py  0201_create-composite-history.py  0202_IAMC_IAMregionAggregations.py  0202nonessential_IAMC_IAMregionAggregations-EDGAR.py  0202nonessential_IAMC_IAMregionAggregations-FAO.py  0203_create-harmonisation-history.py  0210_calculate-follower-scaling-factors.py  0300_harmonise-scenarios.py  0301_create-infilling-database.py  0350_infill-scenarios-silicone.py  0360_infill-scenarios-wmo.py  0370_infill-scenarios-leftovers.py  0380_infill-combination.py  0400_run-magicc.py  0400_single-model-v-historical.py  0401_model-reporting-papermill-driver.py  0401_model-reporting.py  0402_model-internal-consistency.py  040x_model-reporting-papermill-driver.py  1000_run-workflow-ar6-style.py  1001_run-workflow-ar6-magicc-v760.py  1001_run-workflow-updated-up-to-infilling.py  (+83 more)
scripts/: drive-500x-series.py  extract-climate-results.py  extract-emissions-results.py  extract-for-ghg-concs.py  extract-harmonisation-results.py  extract-infilled-up-to-silicone.py  extract-reporting-results.py  pack-unpack-scenario-running-data.py
src/emissions_harmonization_historical/: constants.py  constants_5000.py  excel_writing.py  gfed.py  harmonisation.py  infilling.py  infilling_followers.py  io.py  post_processing.py  pre_pre_processing.py  pre_processing.py  region_mapping.py  scm_running.py  units.py  workflow.py  zenodo.py
(+3443 files in other folders)
