[project]
authors = [
    { name = "Jarmo S. Kikstra", email = "kikstra@iiasa.ac.at"},
    { name = "Jonas Hörsch" },
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-energy-college.org"},
    { name = "Chris Smith", email = "chrisroadmap@gmail.com"}
]
requires-python = "==3.11.*"
dependencies = [
    "pre-commit==3.3.1",
    "ptolemy-iamc @ git+https://github.com/gidden/ptolemy.git@015aa843c340bd57464eb7cfd5f3c8e397201266",
    "aneris-iamc @ git+https://github.com/iiasa/aneris.git@9e5aa002b523f1d5d0ac32554988816e8c20cb44",
    "openscm-units>=0.6.2",
    "scmdata>=0.17.0,<0.18",
    "nomenclature-iamc>=0.22.1,<0.23",
    "xarray-regrid==0.4.0",
    "papermill>=2.6.0,<3",
    "silicone>=1.3.0,<2", "pymagicc>=2.1.5,<3", "openscm-runner>=0.13.0,<0.14", "loguru>=0.7.3,<0.8", "openscm-zenodo>=0.5.0,<0.6", "python-dotenv>=1.1.0,<2",
    # To use a local version, comment this out and use the pypi-dependencies section below
    "gcages>=0.6.0",
    "ixmp4>=0.9.8,<0.10",
    "pandas-openscm>=0.5.0",
]
name = "emissions-harmonization-historical"
version = "0.1.0"
description = "Scripts that combine historical emissions data records from several datasets like CEDS and GFED to create complete historical emissions files that are input to the IAM emissions harmonization algorithms in `IAMconsortium/concordia` (regional harmonization and spatial gridding for ESMs) and `iiasa/climate-assessment` (global climate emulator workflow)."
readme = "README.md"

[tool.pixi.project]
channels = [
    "conda-forge",
]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64",
]

[tool.pixi.system-requirements]
macos = "12.7.6"

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.2.5,<5"
jupytext = ">=1.16.4,<2"
pandas = ">=2.2.3,<3"
pandas-indexing = ">=0.5.2,<0.6"
openpyxl = ">=3.1.5,<4"
pyarrow = ">=17.0.0,<20"
pip = ">=24.2,<25"
dask = ">=2024.9.1,<2025"
geopandas = ">=1.0.1,<2"
xarray = ">=2024.9.0,<2025"
affine = ">=2.4.0,<3"
flox = ">=0.9.12,<0.10"
cf_xarray = ">=0.9.5,<0.10"
rasterio = ">=1.4.1,<2"
cftime = ">=1.6.4,<2"
h5py = ">=3.11.0,<4"
netcdf4 = ">=1.7.1,<2"
h5netcdf = ">=1.4.0,<2"
pooch = ">=1.8.2,<2"
nc-time-axis = ">=1.4.1,<2"
pint-xarray = ">=0.4,<0.5"
seaborn = ">=0.13.2,<0.14"
tqdm = ">=4.67.0,<5"
ipywidgets = ">=8.1.5,<9"
ipykernel = ">=6.29.5,<7"

[tool.pixi.pypi-dependencies]
emissions_harmonization_historical = { path = ".", editable = true }
# # use this to pin to local version
# gcages = { path = "../gcages", editable = true }

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "S101",
    "D100",
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
